# texture-auto-upscaler

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/texup-remaster/: SKILL.md
tests/: test_apply.py  test_bench.py  test_classify.py  test_cli.py  test_codec_ba2.py  test_codec_bsa.py  test_codec_bytes_api.py  test_codec_dds.py  test_codec_dds_dx10.py  test_codec_mtf_arc.py  test_codec_mtf_tex.py  test_codec_mtf_tex2.py  test_codec_standard.py  test_codec_vpk.py  test_codec_vtf.py  test_codec_zip.py  test_codecs_base.py  test_engine.py  test_eta.py  test_models.py  test_path_safety.py  test_pipeline.py  test_presets.py  test_project.py  test_re6_sweep.py  test_router.py  test_scan.py  test_wizard.py
texup/: apply.py  bench.py  classify.py  cli.py  engine.py  eta.py  models.py  pipeline.py  presets.py  project.py  router.py  scan.py  wizard.py
texup/codecs/: __init__.py  ba2.py  base.py  bcn.py  bsa.py  dds.py  mtframework.py  standard.py  vpkarc.py  vtf.py  ziparc.py
